# maistorage-interview

./: .gitignore  README.md  docker-compose.yml
fastapi-app/: .dockerignore  Dockerfile  GEMINI.md  main.py  pyproject.toml
fastapi-app/app/chat/: exceptions.py  routes.py  services.py
fastapi-app/app/core/: logger.py  settings.py
fastapi-app/app/database/: database.py
fastapi-app/tests/: test_services.py
streamlit-app/: Dockerfile  main.py  pyproject.toml  settings.py
streamlit-app/core/: logger.py
