[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.1",
    "google-genai>=1.66.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "sqlmodel>=0.0.37",
    "sse-starlette>=3.3.2",
    "uvicorn>=0.41.0",
]
